invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/G3d.h


/*---------------------------------------------------------------------------*/

typedef struct
{

    double north, south;
    double east, west;
    double top, bottom;

    /* dimension of data in "cells"; rows == #x; cols == #y; depths == #z */
    int rows, cols, depths;

    double ns_res, ew_res, tb_res;

    int proj;			/* Projection (see gis.h) */
    int zone;			/* Projection zone (see gis.h) */

} G3D_Region;


/*---------------------------------------------------------------------------*/

struct G3D_Map;


typedef void resample_fn(struct G3D_Map *, int, int, int, void *, int);


/*---------------------------------------------------------------------------*/

typedef struct G3D_Map
{

    char *fileName;
    char *tempName;
    char *mapset;

    /* operation performed on map */
    int operation;		/* G3D_WRITE_DATA or G3D_READ_DATA */

    /* region */
    G3D_Region region;

    /* window for map */
    G3D_Region window;

    /* resmapling function used for map. default is nearest neighbor */
    resample_fn *resampleFun;

    /* units */
    char *unit;

    /* dimension of a single tile in "cells" */
    int tileX, tileY, tileZ;

    /* # of tiles in x, y, and z direction */
    int nx, ny, nz;

    /* data file specific information */

    /* file descriptor */
    int data_fd;		/* file descriptor */

    /* type in which data is stored on file */
    int type;			/* DCELL_TYPE or FCELL_TYPE */

    /* data concering the compression */
    int precision;		/* G3D_MAX_PRECISION or, 0 .. 23 for float, 
				   0 .. 52 for double */
    int compression;		/* G3D_NO_COMPRESSION or G3D_USE_COMPRESSION */
    int useLzw;			/* G3D_USE_LZW or G3D_NO_LZW */
    int useRle;			/* G3D_USE_RLE or G3D_NO_RLE */
    int useXdr;			/* G3D_USE_XDR or G3D_NO_XDR */

    /* pointer to first tile in file */
    int offset;

    /* pointer to the first index entry in file */
    long indexOffset;

    /* sizeof (long) of the system on which the file is/was written */
    int indexLongNbytes;

    /* max # bytes used in the representation of indices; this is equal to */
    /* # bytes used in the representation of "indexOffset" */
    int indexNbytesUsed;

    /* pointer to the last entry in the file */
    int fileEndPtr;

    /* indicates if index is stored in file; used for G3D_READ_DATA only */
    int hasIndex;		/* G3D_HAS_INDEX or G3D_NO_INDEX */

    /* information concerning internal storage of data */

    /* index specific information */
    /* index[i] == the offset of tile "i" in the data file */
    long *index;

    /* tileLength[i] == # bytes used to store tile "i" */
    int *tileLength;

    /* tile specific information */

    /* type in which data is stored in memory */
    int typeIntern;		/* DCELL_TYPE or FCELL_TYPE */

    /* in non-cache mode the "data" array is used to store one tile */
    char *data;

    /* index of tile currently stored in "data"; -1 if none */
    int currentIndex;

    /* cache related variables */

    int useCache;		/* 1 if cache is used */
    void *cache;		/* pointer to cache structure */
    int cacheFD;		/* file discriptor of cache file -- write mode only */
    char *cacheFileName;	/* filename of cache file -- write mode only */
    long cachePosLast;		/* position of last entry in cache file -- write */
    /* mode only */

    /* range info */
    struct FPRange range;

    /* some constants stored for efficiency */

    /* number of bytes required to store a single value of "type" */
    int numLengthExtern;

    /* number of bytes required to store a single value of "typeIntern" */
    int numLengthIntern;

    /* see header.c for details */
    int clipX, clipY, clipZ;
    int tileXY, tileSize;
    int nxy, nTiles;

    /* mask related information */

    int useMask;		/* 1 if mask is used; 0 otherwise */

} G3D_Map;

int G3d_tileLoad(G3D_Map *, int);

int G3d__removeTile(G3D_Map *, int);

float G3d_getFloatRegion(G3D_Map *, int, int, int);

double G3d_getDoubleRegion(G3D_Map *, int, int, int);

void G3d_getValueRegion(G3D_Map *, int, int, int, void *, int);


/* grass/src/libes/g3d/tilemath.c */
void G3d_tileIndex2tile(G3D_Map *, int, int *, int *, int *);

int G3d_tile2tileIndex(G3D_Map *, int, int, int);

void G3d_tileCoordOrigin(G3D_Map *, int, int, int, int *, int *, int *);

void G3d_tileIndexOrigin(G3D_Map *, int, int *, int *, int *);

void G3d_coord2tileCoord(G3D_Map *, int, int, int, int *, int *, int *, int *,
			 int *, int *);

void G3d_coord2tileIndex(G3D_Map *, int, int, int, int *, int *);

int G3d_coordInRange(G3D_Map *, int, int, int);

int G3d_tileIndexInRange(G3D_Map *, int);

int G3d_tileInRange(G3D_Map *, int, int, int);

int G3d_computeClippedTileDimensions(G3D_Map *, int, int *, int *, int *,
				     int *, int *, int *);

int G3d_isValidLocation(G3D_Map *, double, double, double);

void G3d_location2coord(G3D_Map *, double, double, double, int *, int *,
			int *);

/* grass/src/libes/g3d/tilenull.c */
void G3d_setNullTileType(G3D_Map *, void *, int);

void G3d_setNullTile(G3D_Map *, void *);


/* grass/src/libes/g3d/tileread.c */
int G3d_readTile(G3D_Map *, int, void *, int);

int G3d_readTileFloat(G3D_Map *, int, void *);

int G3d_readTileDouble(G3D_Map *, int, void *);

int G3d_lockTile(G3D_Map *, int);

int G3d_unlockTile(G3D_Map *, int);

int G3d_unlockAll(G3D_Map *);

void G3d_autolockOn(G3D_Map *);

void G3d_autolockOff(G3D_Map *);

void G3d_minUnlocked(G3D_Map *, int);

int G3d_beginCycle(G3D_Map *);

int G3d_endCycle(G3D_Map *);


/* grass/src/libes/g3d/tilewrite.c */
int G3d_writeTile(G3D_Map *, int, const void *, int);

int G3d_writeTileFloat(G3D_Map *, int, const void *);

int G3d_writeTileDouble(G3D_Map *, int, const void *);