OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/g3d.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 533
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tileLoad'):
    G3d_tileLoad = _libs['grass_g3d.6.4.2RC2'].G3d_tileLoad
    G3d_tileLoad.restype = c_int
    G3d_tileLoad.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 534
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d__removeTile'):
    G3d__removeTile = _libs['grass_g3d.6.4.2RC2'].G3d__removeTile
    G3d__removeTile.restype = c_int
    G3d__removeTile.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 535
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getFloatRegion'):
    G3d_getFloatRegion = _libs['grass_g3d.6.4.2RC2'].G3d_getFloatRegion
    G3d_getFloatRegion.restype = c_float
    G3d_getFloatRegion.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 536
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getDoubleRegion'):
    G3d_getDoubleRegion = _libs['grass_g3d.6.4.2RC2'].G3d_getDoubleRegion
    G3d_getDoubleRegion.restype = c_double
    G3d_getDoubleRegion.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 537
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getValueRegion'):
    G3d_getValueRegion = _libs['grass_g3d.6.4.2RC2'].G3d_getValueRegion
    G3d_getValueRegion.restype = None
    G3d_getValueRegion.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 540
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tileIndex2tile'):
    G3d_tileIndex2tile = _libs['grass_g3d.6.4.2RC2'].G3d_tileIndex2tile
    G3d_tileIndex2tile.restype = None
    G3d_tileIndex2tile.argtypes = [POINTER(G3D_Map), c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 541
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tile2tileIndex'):
    G3d_tile2tileIndex = _libs['grass_g3d.6.4.2RC2'].G3d_tile2tileIndex
    G3d_tile2tileIndex.restype = c_int
    G3d_tile2tileIndex.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 542
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tileCoordOrigin'):
    G3d_tileCoordOrigin = _libs['grass_g3d.6.4.2RC2'].G3d_tileCoordOrigin
    G3d_tileCoordOrigin.restype = None
    G3d_tileCoordOrigin.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 543
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tileIndexOrigin'):
    G3d_tileIndexOrigin = _libs['grass_g3d.6.4.2RC2'].G3d_tileIndexOrigin
    G3d_tileIndexOrigin.restype = None
    G3d_tileIndexOrigin.argtypes = [POINTER(G3D_Map), c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 544
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_coord2tileCoord'):
    G3d_coord2tileCoord = _libs['grass_g3d.6.4.2RC2'].G3d_coord2tileCoord
    G3d_coord2tileCoord.restype = None
    G3d_coord2tileCoord.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 546
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_coord2tileIndex'):
    G3d_coord2tileIndex = _libs['grass_g3d.6.4.2RC2'].G3d_coord2tileIndex
    G3d_coord2tileIndex.restype = None
    G3d_coord2tileIndex.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 547
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_coordInRange'):
    G3d_coordInRange = _libs['grass_g3d.6.4.2RC2'].G3d_coordInRange
    G3d_coordInRange.restype = c_int
    G3d_coordInRange.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 548
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tileIndexInRange'):
    G3d_tileIndexInRange = _libs['grass_g3d.6.4.2RC2'].G3d_tileIndexInRange
    G3d_tileIndexInRange.restype = c_int
    G3d_tileIndexInRange.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 549
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tileInRange'):
    G3d_tileInRange = _libs['grass_g3d.6.4.2RC2'].G3d_tileInRange
    G3d_tileInRange.restype = c_int
    G3d_tileInRange.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 550
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_computeClippedTileDimensions'):
    G3d_computeClippedTileDimensions = _libs['grass_g3d.6.4.2RC2'].G3d_computeClippedTileDimensions
    G3d_computeClippedTileDimensions.restype = c_int
    G3d_computeClippedTileDimensions.argtypes = [POINTER(G3D_Map), c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 552
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_isValidLocation'):
    G3d_isValidLocation = _libs['grass_g3d.6.4.2RC2'].G3d_isValidLocation
    G3d_isValidLocation.restype = c_int
    G3d_isValidLocation.argtypes = [POINTER(G3D_Map), c_double, c_double, c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 553
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_location2coord'):
    G3d_location2coord = _libs['grass_g3d.6.4.2RC2'].G3d_location2coord
    G3d_location2coord.restype = None
    G3d_location2coord.argtypes = [POINTER(G3D_Map), c_double, c_double, c_double, POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 556
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setNullTileType'):
    G3d_setNullTileType = _libs['grass_g3d.6.4.2RC2'].G3d_setNullTileType
    G3d_setNullTileType.restype = None
    G3d_setNullTileType.argtypes = [POINTER(G3D_Map), POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 557
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setNullTile'):
    G3d_setNullTile = _libs['grass_g3d.6.4.2RC2'].G3d_setNullTile
    G3d_setNullTile.restype = None
    G3d_setNullTile.argtypes = [POINTER(G3D_Map), POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 560
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readTile'):
    G3d_readTile = _libs['grass_g3d.6.4.2RC2'].G3d_readTile
    G3d_readTile.restype = c_int
    G3d_readTile.argtypes = [POINTER(G3D_Map), c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 561
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readTileFloat'):
    G3d_readTileFloat = _libs['grass_g3d.6.4.2RC2'].G3d_readTileFloat
    G3d_readTileFloat.restype = c_int
    G3d_readTileFloat.argtypes = [POINTER(G3D_Map), c_int, POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 562
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readTileDouble'):
    G3d_readTileDouble = _libs['grass_g3d.6.4.2RC2'].G3d_readTileDouble
    G3d_readTileDouble.restype = c_int
    G3d_readTileDouble.argtypes = [POINTER(G3D_Map), c_int, POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 563
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_lockTile'):
    G3d_lockTile = _libs['grass_g3d.6.4.2RC2'].G3d_lockTile
    G3d_lockTile.restype = c_int
    G3d_lockTile.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 564
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_unlockTile'):
    G3d_unlockTile = _libs['grass_g3d.6.4.2RC2'].G3d_unlockTile
    G3d_unlockTile.restype = c_int
    G3d_unlockTile.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 565
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_unlockAll'):
    G3d_unlockAll = _libs['grass_g3d.6.4.2RC2'].G3d_unlockAll
    G3d_unlockAll.restype = c_int
    G3d_unlockAll.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 566
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_autolockOn'):
    G3d_autolockOn = _libs['grass_g3d.6.4.2RC2'].G3d_autolockOn
    G3d_autolockOn.restype = None
    G3d_autolockOn.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 567
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_autolockOff'):
    G3d_autolockOff = _libs['grass_g3d.6.4.2RC2'].G3d_autolockOff
    G3d_autolockOff.restype = None
    G3d_autolockOff.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 568
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_minUnlocked'):
    G3d_minUnlocked = _libs['grass_g3d.6.4.2RC2'].G3d_minUnlocked
    G3d_minUnlocked.restype = None
    G3d_minUnlocked.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 569
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_beginCycle'):
    G3d_beginCycle = _libs['grass_g3d.6.4.2RC2'].G3d_beginCycle
    G3d_beginCycle.restype = c_int
    G3d_beginCycle.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 570
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_endCycle'):
    G3d_endCycle = _libs['grass_g3d.6.4.2RC2'].G3d_endCycle
    G3d_endCycle.restype = c_int
    G3d_endCycle.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 573
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeTile'):
    G3d_writeTile = _libs['grass_g3d.6.4.2RC2'].G3d_writeTile
    G3d_writeTile.restype = c_int
    G3d_writeTile.argtypes = [POINTER(G3D_Map), c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 574
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeTileFloat'):
    G3d_writeTileFloat = _libs['grass_g3d.6.4.2RC2'].G3d_writeTileFloat
    G3d_writeTileFloat.restype = c_int
    G3d_writeTileFloat.argtypes = [POINTER(G3D_Map), c_int, POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 575
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeTileDouble'):
    G3d_writeTileDouble = _libs['grass_g3d.6.4.2RC2'].G3d_writeTileDouble
    G3d_writeTileDouble.restype = c_int
    G3d_writeTileDouble.argtypes = [POINTER(G3D_Map), c_int, POINTER(None)]
